--- a/antora.yml
+++ b/antora.yml
@@ -1,16 +1,15 @@
 name: getting-started
 title: Getting Started
-version: '5.0'
-display_version: '5.0-preview'
+version: 4.4
 start_page: ROOT:index.adoc
 nav:
 - modules/ROOT/content-nav.adoc
 asciidoc:
   attributes:
     # page-origin-private: false
-    neo4j-version: '5.0'
-    neo4j-version-exact: '5.0.0'
-    neo4j-buildnumber: '5.0'
+    neo4j-version: 4.4
+    neo4j-version-exact: 4.4.0
+    neo4j-buildnumber: 4.4
     offset: '{offset}'
     count: '{count}'
     
