uncomment page-origin-private false to allow edits (#58)

--- a/antora.yml
+++ b/antora.yml
@@ -6,7 +6,7 @@ nav:
 - modules/ROOT/content-nav.adoc
 asciidoc:
   attributes:
-    # page-origin-private: false
+    page-origin-private: false
     neo4j-version: 4.4
     neo4j-version-exact: 4.4.0
     neo4j-buildnumber: 4.4
