--- a/publish.yml
+++ b/publish.yml
@@ -6,7 +6,7 @@ site:
 content:
   sources:
   - url: ./
-    branches: ['3.5','4.0','4.1','4.2','4.3','4.4','dev']
+    branches: ['3.5','4.0','4.1','4.2','4.3','4.4']
     edit_url: https://github.com/neo4j/docs-getting-started/tree/{refname}/{path}
     exclude:
     - '!**/_includes/*'
