--- a/antora.yml
+++ b/antora.yml
@@ -1,6 +1,6 @@
 name: getting-started
 title: Getting Started
-version: '4.4'
+version: '4.4-dev'
 start_page: ROOT:index.adoc
 nav:
 - modules/ROOT/content-nav.adoc
